--- a/index.html
+++ b/index.html
@@ -49,16 +49,23 @@
             <h1>Контакти</h1>
             <div class="section_row">
                 <div class="section_item">
-                    <img src="Instagram_icon.png.webp" alt="">
+                    <a href="https://www.instagram.com/lavenderlayne_" target="_blank">
+                        <img src="Instagram_icon.png.webp" alt="Instagram">
+                    </a>
                 </div>
                 <div class="section_item">
-                    <img src="tg_logo.svg" alt="">
+                    <a href="https://t.me/LavenderLayne" target="_blank">
+                        <img src="tg_logo.svg" alt="Telegram">
+                    </a>
                 </div>
                 <div class="section_item">
-                    <img src="email_logo.png" alt="">
+                    <a href="mailto:evgentimcuk12@gmail.com">
+                        <img src="email_logo.png" alt="Email">
+                    </a>
                 </div>
             </div>
         </section>
+        
     </main>
     <footer>
         <div class="footer_content">
